change: ad logic changed. now only admins delete ads. it will not be automatically deleted
