# internal/controller/http/v1/ad.go
@@ -2,7 +2,6 @@ package v1
 
 import (
 	"net/http"
-	"time"
 
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
@@ -22,7 +21,6 @@ func newAdRoutes(handler *gin.RouterGroup, t usecase.AdUseCase, l logger.Interfa
 	{
 		h.POST("/", r.createAd)
 		h.DELETE("/:id", r.deleteAd)
-		h.DELETE("/expired", r.deleteExpiredAds)
 	}
 }
 
@@ -37,17 +35,19 @@ func newAdRoutes(handler *gin.RouterGroup, t usecase.AdUseCase, l logger.Interfa
 // @Failure     500 {object} response
 // @Router      /ads [post]
 func (r *adRoutes) createAd(c *gin.Context) {
-	var ad entity.Ad
+	var ad entity.CreateAdRequest
 	if err := c.ShouldBindJSON(&ad); err != nil {
 		r.l.Error(err)
 		errorResponse(c, http.StatusBadRequest, "Invalid request body", false)
 		return
 	}
 
-	ad.ID = uuid.NewString()
-	ad.ExpirationTime = time.Now().Add(getDuration(ad.Duration))
-
-	if err := r.t.CreateAd(c.Request.Context(), &ad); err != nil {
+	if err := r.t.CreateAd(c.Request.Context(), &entity.Ad{
+		ID:          uuid.NewString(),
+		Title:       ad.Title,
+		Description: ad.Description,
+		ImageURL:    ad.ImageURL,
+	}); err != nil {
 		r.l.Error(err)
 		errorResponse(c, http.StatusInternalServerError, "Failed to create ad", false)
 		return
@@ -75,40 +75,4 @@ func (r *adRoutes) deleteAd(c *gin.Context) {
 	}
 
 	c.Status(http.StatusNoContent)
-}
-
-// @Summary     Delete expired ads
-// @Description Delete all ads that have expired
-// @Tags        ads
-// @Produce     json
-// @Success     204
-// @Failure     500 {object} response
-// @Router      /ads/expired [delete]
-func (r *adRoutes) deleteExpiredAds(c *gin.Context) {
-	if err := r.t.DeleteExpiredAds(c.Request.Context()); err != nil {
-		r.l.Error(err)
-		errorResponse(c, http.StatusInternalServerError, "Failed to delete expired ads", false)
-		return
-	}
-
-	c.Status(http.StatusNoContent)
-}
-
-func getDuration(option string) time.Duration {
-	switch option {
-	case "1 day":
-		return 24 * time.Hour
-	case "2 days":
-		return 48 * time.Hour
-	case "3 days":
-		return 72 * time.Hour
-	case "1 week":
-		return 7 * 24 * time.Hour
-	case "2 weeks":
-		return 14 * 24 * time.Hour
-	case "monthly":
-		return 30 * 24 * time.Hour
-	default:
-		return 0
-	}
 }
